[gd_scene load_steps=3 format=2]

[ext_resource path="res://Worlds/Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://themes/menu_background.png" type="Texture" id=2]

[node name="Main_Menu" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1028.0
margin_bottom = 598.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="MainMenu" type="VBoxContainer" parent="."]
margin_left = 366.028
margin_top = 152.563
margin_right = 732.028
margin_bottom = 425.563
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="Button" parent="MainMenu"]
margin_right = 366.0
margin_bottom = 20.0
text = "Connect"

[node name="Server" type="Button" parent="MainMenu"]
margin_top = 24.0
margin_right = 366.0
margin_bottom = 44.0
text = "Start Server (S)"

[node name="StartButton" type="Button" parent="MainMenu"]
margin_top = 48.0
margin_right = 366.0
margin_bottom = 68.0
text = "Single Player"

[node name="OptionsButton" type="Button" parent="MainMenu"]
margin_top = 72.0
margin_right = 366.0
margin_bottom = 92.0
text = "Options (O)"

[node name="QuitButton" type="Button" parent="MainMenu"]
margin_top = 96.0
margin_right = 366.0
margin_bottom = 116.0
text = "Quit (Q)"

[node name="OptionsMenu" type="VBoxContainer" parent="."]
visible = false
margin_left = 536.953
margin_top = 343.734
margin_right = 592.953
margin_bottom = 422.734
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="OptionsMenu"]
margin_right = 56.0
columns = 2

[node name="CloseOptions" type="Button" parent="OptionsMenu"]
margin_top = 4.0
margin_right = 56.0
margin_bottom = 24.0
